configured the swagger
