# internal/app/http/handler/account_create.go
@@ -8,6 +8,18 @@ type createAccountRequestBody struct {
 	Name string `json:"name"`
 }
 
+//	@Summary		Create a bank account
+//	@Tags			Bank Account
+//	@Description	Create a new custom bank account with specific name
+//	@ID				creates custom bank account
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		createAccountRequestBody	true	"account name"
+//	@Success		200		{string}	error
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/account [post]
 func (h *HttpHandler) createAccount(c *fiber.Ctx) error {
 	user, err := h.authService.AuthenticateUser(c.Cookies("jwt"))
 	if err != nil {
