# internal/app/http/handler/account_delete.go
@@ -6,6 +6,18 @@ type deleteAccountRequestBody struct {
 	Name string `json:"name"`
 }
 
+//	@Summary		Delete a bank account
+//	@Tags			Bank Account
+//	@Description	Delete a bank account with specific name
+//	@ID				deletes custom bank account
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		deleteAccountRequestBody	true	"account name"
+//	@Success		200		{string}	error
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/account [delete]
 func (h *HttpHandler) deleteAccount(c *fiber.Ctx) error {
 	user, err := h.authService.AuthenticateUser(c.Cookies("jwt"))
 	if err != nil {
