# internal/app/http/handler/transfer_make.go
@@ -8,6 +8,18 @@ type makeTransferRequestBody struct {
 	Amount          uint `json:"amount"`
 }
 
+//	@Summary		Make a transfer
+//	@Tags			Transfer
+//	@Description	Make a transfer between your/other clients accounts
+//	@ID				Makes a transfer
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		makeTransferRequestBody	true	"transfer data"
+//	@Success		200		{string}	error
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/transfer [post]
 func (h *HttpHandler) makeTransfer(c *fiber.Ctx) error {
 	user, err := h.authService.AuthenticateUser(c.Cookies("jwt"))
 	if err != nil {
