# internal/app/http/handler/user_logout.go
@@ -4,14 +4,14 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-// @Summary Logout
-// @Tags Auth
-// @Description Logout from account
-// @ID logs out from account
-// @Produce json
-// @Success 200 {string} string responses.Success
-// @Failure 401 {string} string responses.Unauthorized
-// @Router /logout [post]
+//	@Summary		Logout
+//	@Tags			Auth
+//	@Description	Logout from account
+//	@ID				logs out from account
+//	@Produce		json
+//	@Success		200	{string}	string
+//	@Failure		401	{string}	string
+//	@Router			/logout [post]
 func (h *HttpHandler) logout(c *fiber.Ctx) error {
 	_, err := h.authService.AuthenticateUser(c.Cookies("jwt"))
 	if err != nil {
